fixed overflowing text

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ h1 { color: #111; font-family: 'Helvetica Neue',sans-serif;
             font-size: 1em;
             opacity: .5;
             text-align: center;
-           
+           overflow: auto;
             margin-top: 2%;
             flex-shrink: 1;
           
